@@ -2,6 +2,7 @@ package de.dfki.mary.voicebuilding.tasks
 
 import groovy.json.JsonBuilder
 import org.gradle.api.DefaultTask
+import org.gradle.api.JavaVersion
 import org.gradle.api.file.DirectoryProperty
 import org.gradle.api.provider.Property
 import org.gradle.api.tasks.*
@@ -35,6 +36,13 @@ class ConvertTextToMaryXml extends DefaultTask {
             classpath project.configurations.marytts
             mainClass = 'marytts.BatchProcessor'
             args = [jsonFile]
+            if (JavaVersion.current().java9Compatible) {
+                jvmArgs = [
+                        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+                ]
+            }
         }
     }
 }
